parser/src/snapshots/parser__parser__tests__parse_test_data@crash__crash000035.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/crash/crash000035.json
---
Ok(
    Number(
        -9.223372036854776e18,
    ),
)
