parser/src/snapshots/parser__parser__tests__parse_test_data@crash__crash000036.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/crash/crash000036.json
---
Ok(
    Array(
        [
            Number(
                1066.0,
            ),
            Number(
                10.0,
            ),
            Number(
                1.0,
            ),
            Number(
                0.1,
            ),
            Number(
                -1.0,
            ),
            Number(
                -8.88888888888889e31,
            ),
            String(
                "rod",
            ),
        ],
    ),
)
